--- a/server/index.html
+++ b/server/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"></link>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css"></link>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Shift DMS</title>
@@ -13,8 +13,8 @@
   <body>
     <div id="app"></div>
     <!--Import jQuery before materialize.js-->
-    <!--<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="js/semantic.min.js"></script>-->
-    <script src="js/client.min.js"></script>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <!--<script type="text/javascript" src="js/semantic.min.js"></script>-->
+    <script src="client.min.js"></script>
   </body>  
 </html>
