--- a/server/index.html
+++ b/server/index.html
@@ -14,7 +14,7 @@
     <div id="app"></div>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <!--<script type="text/javascript" src="js/semantic.min.js"></script>-->
+    <script type="text/javascript" src="js/semantic.min.js"></script>
     <script src="client.min.js"></script>
   </body>  
 </html>
