--- a/server/index.html
+++ b/server/index.html
@@ -10,7 +10,7 @@
     <title>Shift DMS</title>
     <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
   </head>
-  <body>
+  <body style="overflow-y: scroll">
     <div id="app"></div>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
