--- a/server/index.html
+++ b/server/index.html
@@ -11,7 +11,7 @@
     <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
   </head>
   <body style="overflow-y: scroll">
-    <div id="app"></div>
+    <div id="app" style="height:100%"></div>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/semantic.min.js"></script>
