--- a/server/index.html
+++ b/server/index.html
@@ -15,6 +15,7 @@
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/semantic.min.js"></script>
+    <script src='//cdn.tinymce.com/4/tinymce.min.js'></script>
     <script src="client.min.js"></script>
   </body>  
 </html>
