--- a/server/index.html
+++ b/server/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css" rel="stylesheet"/>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Butterfly+Kids|Indie+Flower|Short+Stack" rel="stylesheet">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Shift DMS</title>
