--- a/server/index.html
+++ b/server/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css"/>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css"></link>
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Butterfly+Kids|Indie+Flower|Short+Stack" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Butterfly+Kids|Indie+Flower|Short+Stack"> -->
+    <link rel="stylesheet" href="css/main.css"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Shift DMS</title>
